--- a/angular.json
+++ b/angular.json
@@ -28,9 +28,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/@nebular/theme/styles/prebuilt/default.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.js", 
+              "./node_modules/signalr/jquery.signalR.js"
+            ]
           },
           "configurations": {
             "production": {
