--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.3",
+    "@angular/animations": "^8.2.14",
+    "@angular/cdk": "^8.2.3",
     "@angular/common": "~8.2.3",
     "@angular/compiler": "~8.2.3",
     "@angular/core": "~8.2.3",
     "@angular/forms": "~8.2.3",
+    "@angular/http": "^7.2.15",
     "@angular/platform-browser": "~8.2.3",
     "@angular/platform-browser-dynamic": "~8.2.3",
     "@angular/router": "~8.2.3",
+    "@nebular/eva-icons": "^4.6.0",
+    "@nebular/theme": "^4.6.0",
     "rxjs": "~6.4.0",
+    "signalr": "^2.4.1",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
